Solve problems with layout bugs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+
+/** General Layout Settings */
+body > .main-content { padding-top: 70px; }
+html, 
+body {
+  margin: 0px;
+  background-color: #ff6f69;
+}
+/** Navbar */
+.fabiskuechens-bg__yellow { background-color: #ffcc5c; }
+/** Footer */
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+}
+/** Typography */
+h2 { text-transform: uppercase; }
