--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,19 +2,3 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-/** General Layout Settings */
-body > .main-content { padding-top: 70px; }
-html, 
-body { background-color: #ff6f69; }
-/** Navbar */
-.fabiskuechens-bg__yellow { background-color: #ffcc5c; }
-/** Footer */
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-}
-/** Typography */
-h2 { text-transform: uppercase; }
